fix: confetti resizing main on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   padding: 0;
 }
 
-/* main elements */
+/* global elements */
 html {
   background-color: #2b1141;
   display: grid;
@@ -17,15 +17,11 @@ html {
 }
 
 main {
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* justify-content: space-between; */
-  /* min-height: 700px; */
   background-color: #f5f5f5;
   border-radius: 0.75em;
-  max-width: 700px;
   padding: clamp(0.5em, 5vw, 4em);
   text-align: center;
+  width: 750px;
 }
 
 h1 {
@@ -38,7 +34,7 @@ h1 {
 p {
   color: #4a4e74;
   font-family: 'Inter', sans-serif;
-  font-size: clamp(1rem, 5vw, 1.25rem);
+  font-size: clamp(1rem, 4vw, 1.25rem);
   margin-top: 1em;
 }
 
@@ -60,7 +56,6 @@ svg {
   padding: 0.75em 2em;
 }
 .roll-button:active {
-  box-shadow: inset 0px 6px 16px rgba(0, 0, 0, 0.36);
   box-shadow: none;
 }
 
@@ -70,6 +65,7 @@ svg {
   gap: 1.25em;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto;
+  justify-items: center;
   margin-top: 2em;
 }
 
@@ -84,7 +80,7 @@ svg {
 }
 
 /* mobile layout - dice stacked in two vertical rows of 5 dice, main element takes the whole page*/
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 750px) {
   html {
     display: block;
   }
@@ -92,6 +88,7 @@ svg {
     border-radius: 0;
     height: 100%;
     min-height: 100vh;
+    width: 100%;
   }
   .dice-container {
     grid-template-columns: auto auto;
